--- a/index.qmd
+++ b/index.qmd
@@ -9,4 +9,4 @@ All submissions to the Image23 conference with additional figures, references, .
 List of abstrac:
 
 - [Digital twin with control](DigitalTwin/abstract.qmd) An uncertainty-aware digital twin for geological carbon storage
-- [Velocity Continuation for Common Image Gathers](Rex2024SEG/paper.qmd) A framework to obtain CIGs in a fast manner
+- [Accelerated Velocity Continuation for Common Image Gathers](Rex2024SEG/paper.qmd) A framework to obtain CIGs in a fast manner
