--- a/Rex2024SEG/paper.qmd
+++ b/Rex2024SEG/paper.qmd
@@ -31,12 +31,12 @@ NOTE: The fft is taken along the offset dimension -->
 
 ## Methodology
 
-We conduct a case study on a 2D slice of the Compass model. We generate the observed data with 64 sources and 256 ocean bottom nodes, using a Ricker wavelet with central frequency of 0.015 Hz. We assume absorbing boundaries in our study. We add uncorrelated band-limited noise with an SNR of 12 dB for realism. We use 500 migration-velocity models and generate their CIGs to form our training dataset (Figure 1.c). Next, we train an FNO to map pairs of $1)$ an initial migration velocity model, $2)$ its associated CIGs, and $3)$ a target migration-velocity model, to the CIGs associated with the target velocity model (Figure 1.d).
+We conduct a case study on a 2D slice of the Compass model. We generate the observed data with 256 sources and 64 ocean bottom nodes, using a Ricker wavelet with central frequency of 0.015 Hz. We assume absorbing boundaries in our study. We add uncorrelated band-limited noise with an SNR of 12 dB for realism. We use 500 migration-velocity models and generate their CIGs to form our training dataset (Figure 1.c). Next, we train an FNO to map pairs of $1)$ an initial migration velocity model, $2)$ its associated CIGs, and $3)$ a target migration-velocity model, to the CIGs associated with the target velocity model (Figure 1.d).
 
 ::: {#fig-unsup}
 ![](figures/workflow.001.jpeg){width="90%"}
 
-Slice of a Compass model (a), Smoothed velocity models obtained by pertrubing our slice (b), Migrated CIGs from smoothed velocity models as training targets (c), Surrogate that maps our input to the target CIGs (d)
+Our initial velocity model and it's CIG (a), Smoothed velocity models (b), Migrated CIGs from smoothed velocity models as training targets (c), Surrogate that maps our input to the target CIGs (d)
 :::
 
 ::: {#fig-sup}
@@ -49,7 +49,7 @@ Column 1 represents the true CIG of the smoothed velocity models computed analyt
 
 ## Results
 
-Figure 2 displays the FNO prediction in the subsurface-offset domain across various velocity models in an unseen test dataset. Despite some minor errors, the FNO prediction successfully captures the focusing pattern of the CIGs, and correctly produces the imaged reflectivities in the zero-offset. Computationally, the upfront training cost could potentially be reduced by transfer learning techniques. At inference, our trained FNO achieves $3200\times$ speed-up compared to numerical computation of CIGs. These findings substantiate the efficiency of the FNOs in generating CIGs for many velocity models, underscoring its applicability in real-time MVA. This FNO-assisted velocity continuation framework is capable of selecting velocity models with desirable properties in their CIGs, which allows for seamless integration with generative artificial intelligence workflows [@wise]. Additionally, it enables fast uncertainty quantification of imaged reflectivities with respect to many velocity models. {--In addition to this, the framework could also be pivotal in performing inverse design optimization. By updating our background velocity models such that they yield CIGs with specific, desirable properties such as focused energy, we can further refine our understanding of seismic data.--}{>>I am a bit relunctant to give away this information<<} This work is made reproducible at [FNO-CIG](https://github.com/slimgroup/FNO-CIG) using distributed Fourier neural operators implemented in [ParametericOperators.jl](https://github.com/slimgroup/ParametericOperators.jl).
+Figure 2 displays the FNO prediction in the subsurface-offset domain across various velocity models in an unseen test dataset. Despite some minor errors, the FNO prediction successfully captures the focusing pattern of the CIGs, and correctly produces the imaged reflectivities in the zero-offset. Computationally, the upfront training cost could potentially be reduced by transfer learning techniques. At inference, our trained FNO achieves $3200\times$ speed-up compared to numerical computation of CIGs. These findings substantiate the efficiency of the FNOs in generating CIGs for many velocity models, underscoring its applicability in real-time MVA. This FNO-assisted velocity continuation framework is capable of selecting velocity models with desirable properties in their CIGs, which allows for seamless integration with generative artificial intelligence workflows [@wise]. Additionally, it enables fast uncertainty quantification of imaged reflectivities with respect to many velocity models. {--In addition to this, the framework could also be pivotal in performing inverse design optimization. By updating our background velocity models such that they yield CIGs with specific, desirable properties such as focused energy, we can further refine our understanding of seismic data.--}{>>I am a bit relunctant to give away this information<<} This work is made reproducible at [FNO-CIG](https://github.com/slimgroup/FNO-CIG) using distributed Fourier Neural Operators implemented in [ParametricOperators.jl](https://github.com/slimgroup/ParametricOperators.jl).
 
 ## Acknowledgement {.appendix}
 
