--- a/KarthaSEG2024/paper.bib
+++ b/KarthaSEG2024/paper.bib
@@ -25,3 +25,25 @@
    author={Dreher, Kris K. and Ayala, Leonardo and Schellenberg, Melanie and Hübner, Marco and Nölke, Jan-Hinrich and Adler, Tim J. and Seidlitz, Silvia and Sellner, Jan and Studier-Fischer, Alexander and Gröhl, Janek and Nickel, Felix and Köthe, Ullrich and Seitel, Alexander and Maier-Hein, Lena},
    year={2023},
    pages={770–780} }
+
+@article{witteJUDI2019,
+author = {Philipp A. Witte and Mathias Louboutin and Navjot Kukreja and Fabio Luporini and Michael Lange and Gerard J. Gorman and Felix J. Herrmann},
+title = {A large-scale framework for symbolic implementations of seismic inversion algorithms in Julia},
+journal = {GEOPHYSICS},
+volume = {84},
+number = {3},
+pages = {F57-F71},
+year = {2019},
+doi = {10.1190/geo2018-0174.1},
+URL = {https://doi.org/10.1190/geo2018-0174.1},
+eprint = {https://doi.org/10.1190/geo2018-0174.1}
+}
+
+@misc{orozco2023invertiblenetworksjl,
+      title={InvertibleNetworks.jl: A Julia package for scalable normalizing flows}, 
+      author={Rafael Orozco and Philipp Witte and Mathias Louboutin and Ali Siahkoohi and Gabrio Rizzuti and Bas Peters and Felix J. Herrmann},
+      year={2023},
+      eprint={2312.13480},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
