--- a/Rex2024SEG/paper.qmd
+++ b/Rex2024SEG/paper.qmd
@@ -16,7 +16,7 @@ $$
 
 ## Introduction
 
-Common-image gathers (CIGs) are pivotal in migration-velocity analysis (MVA). However, MVA is often hindered by the computational burden of traditional migration methods. To bypass these limitations, we introduce a neural surrogate learning approach that utilizes Fourier Neural Operators [FNOs, @fno] to accelerate MVA. Following the velocity-continuation scheme of @siahkoohi2022velocity, we train a survey-specific FNO to map the CIGs associated with one migration-velocity model to another without remigration. This methodology leverages the capacity of FNOs to approximate complex PDE-based mappings rendering computational cost at inference negligible, thereby expediting MVA. By enabling rapid generation and evaluation of CIGs across various velocity models, it offers a pathway to quickly examine velocity models according to preferred properties and to quantify uncertainties in imaged reflectivities at the same time. {--Additionally, this methodology paves the way for inverse design optimization, updating velocity models to produce CIGs with specific, desirable characteristics like focused energy.--}{>>I am a bit relunctant to give away this information<<}
+Common-image gathers (CIGs) are pivotal in migration-velocity analysis (MVA). However, MVA is often hindered by the computational burden of traditional migration methods. To bypass these limitations, we introduce a neural-surrogate learning approach that utilizes Fourier Neural Operators [FNOs, @fno] to accelerate MVA. Following the velocity-continuation scheme of @siahkoohi2022velocity, we train a survey-specific FNO to map the CIGs associated with one migration-velocity model to another without remigration. This methodology leverages the capacity of FNOs to approximate complex PDE-based mappings, rendering computational cost at inference negligible, thereby expediting MVA. By enabling rapid generation and evaluation of CIGs across various velocity models, it offers a pathway to quickly examine velocity models according to preferred properties and to quantify uncertainties in imaged reflectivities at the same time. {--Additionally, this methodology paves the way for inverse design optimization, updating velocity models to produce CIGs with specific, desirable characteristics like focused energy.--}{>>I am a bit relunctant to give away this information<<}
 
 <!-- 
 If optimization ends up working by Friday :
@@ -31,12 +31,12 @@ NOTE: The fft is taken along the offset dimension -->
 
 ## Methodology
 
-We conduct a case study on a 2D slice of the Compass model. We generate the observed data with 256 sources and 64 ocean bottom nodes, using a Ricker wavelet with central frequency of 0.015 Hz. We assume absorbing boundaries in our study. We add uncorrelated band-limited noise with an SNR of 12 dB for realism. We use 500 migration-velocity models and generate their CIGs to form our training dataset (Figure 1.c). Next, we train an FNO to map pairs of $1)$ an initial migration velocity model, $2)$ its associated CIGs, and $3)$ a target migration-velocity model, to the CIGs associated with the target velocity model (Figure 1.d).
+We conduct a case study on a 2D slice of the Compass model. We generate observed data with 256 sources and 64 ocean bottom nodes, using a Ricker wavelet with central frequency of 0.015 Hz. We assume absorbing boundaries in our study. We add uncorrelated band-limited noise with an SNR of 12 dB for realism (see Figure 1 (a)). (I do not see noise in the shots). For a given migration-velocity model, CIGs are computed. To train the network to generate CIGs for new migration-velocity models without remigration, 500 new migration-velocity models are generated and used to generate CIGs to form our training dataset (Figure 1 (c)). Given these models and CIGs, a FNO is to trained to map $1)$ initial migration-velocity models, $2)$ their associated CIGs, and $3)$ target migration-velocity models, to the CIGs associated with the target migration-velocity models (Figure 1 (d)). (I am sorry but the text and figure confusing. Does this mean that aside from the target one and the same initial model goes in?)
 
 ::: {#fig-unsup}
 ![](figures/workflow.001.jpeg){width="90%"}
 
-Our initial velocity model and it's CIG (a), Smoothed velocity models (b), Migrated CIGs from smoothed velocity models as training targets (c), Surrogate that maps our input to the target CIGs (d)
+Our initial velocity model and it's CIG (a), Smoothed velocity models (b), Migrated CIGs from smoothed velocity models as training targets (c), Surrogate that maps our input to the target CIGs  (d) (NEEDS TO BE FIXED. TOO TERSE.)
 :::
 
 ::: {#fig-sup}
@@ -44,12 +44,12 @@ Our initial velocity model and it's CIG (a), Smoothed velocity models (b), Migra
 
 ![](figures/valid_sample=6.png)
 
-Column 1 represents the true CIG of the smoothed velocity models computed analytically. Column 2 represents the predicted CIG from our FNO whereas the last column shows the amplified absolute difference between the first 2 columns
+Column 1 represents the true CIG of the smoothed velocity models computed analytically (what does this mean?????). Column 2 represents the predicted CIG from our FNO. The last column shows the amplified absolute difference between the first 2 columns
 :::
 
 ## Results
 
-Figure 2 displays the FNO prediction in the subsurface-offset domain across various velocity models in an unseen test dataset. Despite some minor errors, the FNO prediction successfully captures the focusing pattern of the CIGs, and correctly produces the imaged reflectivities in the zero-offset. Computationally, the upfront training cost could potentially be reduced by transfer learning techniques. At inference, our trained FNO achieves $3200\times$ speed-up compared to numerical computation of CIGs. These findings substantiate the efficiency of the FNOs in generating CIGs for many velocity models, underscoring its applicability in real-time MVA. This FNO-assisted velocity continuation framework is capable of selecting velocity models with desirable properties in their CIGs, which allows for seamless integration with generative artificial intelligence workflows [@wise]. Additionally, it enables fast uncertainty quantification of imaged reflectivities with respect to many velocity models. {--In addition to this, the framework could also be pivotal in performing inverse design optimization. By updating our background velocity models such that they yield CIGs with specific, desirable properties such as focused energy, we can further refine our understanding of seismic data.--}{>>I am a bit relunctant to give away this information<<} This work is made reproducible at [FNO-CIG](https://github.com/slimgroup/FNO-CIG) using distributed Fourier Neural Operators implemented in [ParametricOperators.jl](https://github.com/slimgroup/ParametricOperators.jl).
+Figure 2 displays the FNO prediction in the subsurface-offset domain across various velocity models in an unseen test dataset. Despite some minor errors, the FNO prediction successfully captures the focusing pattern of the CIGs, and correctly produces the imaged reflectivities at the near zero-offsets (should all of these be focussed? Confusing). Computationally, the upfront training cost could potentially be reduced by transfer learning techniques. (Why here?) At inference, our trained FNO achieves $3200\times$ speed-up compared to numerical computation of CIGs. These findings substantiate the computational efficiency of the FNOs in generating CIGs for many velocity models, underscoring its applicability in real-time MVA (what is this?). This FNO-assisted velocity continuation framework is capable of selecting velocity models with desirable properties in their CIGs, which allows for seamless integration with generative artificial intelligence workflows [@wise] (empty statement). Additionally, it enables fast uncertainty quantification of imaged reflectivities with respect to many velocity models. {--In addition to this, the framework could also be pivotal in performing inverse design optimization. By updating our background velocity models such that they yield CIGs with specific, desirable properties such as focused energy, we can further refine our understanding of seismic data.--}{>>I am a bit relunctant to give away this information<<} This work is made reproducible at [FNO-CIG](https://github.com/slimgroup/FNO-CIG) using distributed Fourier Neural Operators implemented in [ParametricOperators.jl](https://github.com/slimgroup/ParametricOperators.jl).
 
 ## Acknowledgement {.appendix}
 
