--- a/KarthaSEG2024/paper.qmd
+++ b/KarthaSEG2024/paper.qmd
@@ -39,7 +39,7 @@ $$
 
 ## Motivation
 
-The primary objective is to develop a mapping from acoustic shot records without density information to acoustic shot records with density information. One approach involves generating shot records with density information directly, thereby achieving stronger reflections and a clearer image of the subsurface. This extra parameter of density makes it  computationally expensive. We used generative AI to solve this problem. Recently, generative AI has significantly impacted the field of accurate image generation. We opted for Conditional Normalizing Flows due to its invertibility and computationally efficient characteristics. This method promises to provide an accurate and cost-effective way to generate acoustic shot records with density information from those without it, which are typically expensive to create. With generative AI, the time required for sampling is almost instantaneous (~10 ms) compared to using traditional computational software to produce shot records.
+The performance of Bayesian inference on seismic shot data deteriorates when the forward model is misspecified. For instance, this situation arises when data is modeled by a velocity-only kernel while more realistic acoustic data may include the effects of density variations. To address this situation, the primary objective of this paper is to develop a mapping from acoustic shot records, which lack density information, to those that include it. Instead of solving multi-parameter inference problems, which may become computationally expensive, our approach involves neural generation of shot records with density information from those that lack it, thereby achieving stronger reflections and and improved images of the subsurface. To tackle this problem, we use techniques from generative AI (genAI). Recently, GenAI has significantly impacted the field of accurate image generation. Contrary to earlier work in this are, we propose the use of Conditional Normalizing Flows (CNFs), which thanks to their invertibility are computationally efficient. In addition, one and the same network is capable of conducting the forward and inverse mapping.
 
 ## Method
 
